logging property updated

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,8 +23,9 @@ steps:
            '--service',
            'my-app']
 
+substitutions:
+  _CLOUD_LOGGING_ONLY: CLOUD_LOGGING_ONLY
+
 # Store images in Google Artifact Registry
 #images:
 #  - us-central1-docker.pkg.dev/scientific-host-415721/p-backend-registry/my-app:${SHORT_SHA}
-
-logging: CLOUD_LOGGING_ONLY
