--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,8 +23,8 @@ steps:
            '--service',
            'my-app']
 
-substitutions:
-  _CLOUD_LOGGING_ONLY: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 # Store images in Google Artifact Registry
 #images:
