--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,18 +3,18 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build',
            '-t',
-           'us-central1-docker.pkg.dev/scientific-host-415721/$_SERVICE_NAME/my-app:${SHORT_SHA}',
+           'us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}',
            '.']
 
   # Docker push to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',  'us-central1-docker.pkg.dev/scientific-host-415721/$_SERVICE_NAME/my-app:${SHORT_SHA}']
+    args: ['push',  'us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}']
 
   # Deploy container image to Cloud Run
   - name: 'gcr.io/cloud-builders/cloud-run'
     args: ['deploy',
            '--image',
-           'us-central1-docker.pkg.dev/scientific-host-415721/$_SERVICE_NAME/my-app:${SHORT_SHA}',
+           'us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}',
            '--platform',
            'gcr.io/cloud-run/runtime-v2',
            '--region',
@@ -28,4 +28,4 @@ options:
 
 # Store images in Google Artifact Registry
 #images:
-#  - us-central1-docker.pkg.dev/scientific-host-415721/$_SERVICE_NAME/my-app:${SHORT_SHA}
+#  - us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}
