service name updated

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,5 +27,5 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 # Store images in Google Artifact Registry
-#images:
-#  - us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}
+images:
+  - us-central1-docker.pkg.dev/scientific-host-415721/cloud-run-source-deploy/my-app:${SHORT_SHA}
